[package]
edition = "2021"
name = "schwafel-cli"
version = "0.1.0"

[[bin]]
name = "schwafel"
path = "src/main.rs"

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
schwafel-worker = {git = "https://github.com/schwafel/schwafel-worker.git"}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["full"]}
worker = "0.0.9"